--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "webpack-dev-server": "^2.9.3"
   },
   "dependencies": {
-    "loader-utils": "^1.1.0"
+    "highlight.js": "^9.12.0",
+    "loader-utils": "^1.1.0",
+    "markdown-it": "^8.4.0"
   }
 }
