--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
+    "markdown-it-anchor": "^4.0.0",
     "mocha": "^4.0.1",
     "style-loader": "^0.19.0",
     "vue": "^2.5.2",
