--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.4",
   "description": "Webpack loader for converting Markdown files to Vue components.",
   "main": "index.js",
+  "nyc": {
+    "reporter": [
+      "lcov",
+      "text-summary"
+    ],
+    "report-dir": "./test/coverage/"
+  },
   "scripts": {
     "dev": "cd example && webpack-dev-server --hot --inline --port 8888",
-    "test": "mocha"
+    "lint": "eslint --ext .js,.vue --config .eslintrc.js index.js src test/specs test/index.js example",
+    "test": "nyc mocha",
+    "coveralls": "cat test/coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "repository": {
     "type": "git",
@@ -32,7 +41,9 @@
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.2",
     "cheerio": "^1.0.0-rc.2",
+    "coveralls": "^3.0.0",
     "css-loader": "^0.28.7",
     "eslint": "^4.9.0",
     "eslint-config-standard": "^10.2.1",
@@ -45,6 +56,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "markdown-it-anchor": "^4.0.0",
     "mocha": "^4.0.1",
+    "nyc": "^11.2.1",
     "style-loader": "^0.19.0",
     "vue": "^2.5.2",
     "vue-loader": "^13.3.0",
