--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: node_js
+sudo: false
+dist: trusty
 cache:
   yarn: true
   directories:
@@ -15,4 +17,3 @@ deploy:
     api_key: $NPM_TOKEN
     on:
       tags: true
-      branch: master
