--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-md-loader",
   "version": "0.2.0",
-  "description": "Webpack loader for converting Markdown files to Vue components.",
+  "description": "Webpack loader for converting Markdown files to ALIVE Vue components.",
   "main": "index.js",
   "nyc": {
     "reporter": [
