--- a/package.json
+++ b/package.json
@@ -59,9 +59,10 @@
     "nyc": "^11.2.1",
     "style-loader": "^0.19.0",
     "vue": "^2.5.2",
-    "vue-loader": "^13.3.0",
+    "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.8.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.1.11"
   },
   "dependencies": {
