--- a/package.json
+++ b/package.json
@@ -38,26 +38,27 @@
   "homepage": "https://github.com/wxsms/vue-md-loader#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
     "cheerio": "^1.0.0-rc.2",
     "coveralls": "^3.0.0",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.9.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.2.2",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.5.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "markdown-it-anchor": "^4.0.0",
-    "mocha": "^4.0.1",
-    "nyc": "^11.2.1",
-    "style-loader": "^0.19.0",
+    "eslint-plugin-mocha": "^6.2.0",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^5.2.3",
+    "markdown-it-anchor": "^5.2.5",
+    "mocha": "^6.2.2",
+    "nyc": "^14.1.1",
+    "style-loader": "^1.0.0",
     "vue": "^2.5.2",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.5.2",
@@ -68,6 +69,6 @@
   "dependencies": {
     "highlight.js": "^9.12.0",
     "loader-utils": "^1.1.0",
-    "markdown-it": "^8.4.0"
+    "markdown-it": "^10.0.0"
   }
 }
