--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,11 @@ jobs:
       - uses: c-hive/gha-yarn-cache@v1
       - run: yarn --frozen-lockfile
       - run: npm run test
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: ./test/coverage/lcov.info
   build:
     runs-on: ubuntu-latest
     steps:
