--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "report-dir": "./test/coverage/"
   },
   "scripts": {
-    "dev:example": "cd example && cross-env NODE_ENV=development webpack-dev-server --hot --inline --port 8888",
+    "dev:example": "cd example && cross-env NODE_ENV=development webpack-dev-server --hot --port 8888 --static .",
     "build:example": "cd example && cross-env NODE_ENV=production webpack",
     "lint": "eslint --ext .js,.vue --config .eslintrc.js index.js src example",
     "lint:fix": "npm run lint -- --fix",
