--- a/package.json
+++ b/package.json
@@ -3,20 +3,17 @@
   "version": "2.0.0",
   "description": "Webpack loader for converting Markdown files to ALIVE Vue components.",
   "main": "index.js",
-  "nyc": {
-    "reporter": [
-      "lcov",
-      "text-summary"
-    ],
-    "report-dir": "./test/coverage/"
-  },
+  "files": [
+    "index.js",
+    "src"
+  ],
   "scripts": {
     "dev:example": "cd example && cross-env NODE_ENV=development webpack-dev-server --hot --port 8888 --static .",
     "build:example": "cd example && cross-env NODE_ENV=production webpack",
     "lint": "eslint --ext .js,.vue .",
     "lint:fix": "npm run lint -- --fix",
-    "test": "nyc mocha",
-    "coveralls": "cat test/coverage/lcov.info | ./node_modules/.bin/coveralls"
+    "test": "jest --coverage",
+    "coveralls": "cat coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "repository": {
     "type": "git",
@@ -43,7 +40,6 @@
     "babel-core": "6.26.3",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.3",
-    "chai": "4.3.4",
     "cheerio": "1.0.0-rc.10",
     "coveralls": "3.1.1",
     "cross-env": "7.0.3",
@@ -56,9 +52,8 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "5.1.1",
     "eslint-plugin-vue": "8.0.3",
+    "jest": "27.3.1",
     "markdown-it-anchor": "8.4.1",
-    "mocha": "9.1.3",
-    "nyc": "15.1.0",
     "prettier": "2.4.1",
     "style-loader": "3.3.1",
     "vue": "2.6.14",
