chore: fix coveralls

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: ./test/coverage/lcov.info
+          path-to-lcov: ./coverage/lcov.info
   build:
     runs-on: ubuntu-latest
     steps:
