--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "build:example": "cd example && cross-env NODE_ENV=production webpack",
     "lint": "eslint --ext .js,.vue .",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest --coverage",
-    "coveralls": "cat coverage/lcov.info | ./node_modules/.bin/coveralls"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -47,7 +46,6 @@
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.3",
     "cheerio": "1.0.0-rc.10",
-    "coveralls": "3.1.1",
     "cross-env": "7.0.3",
     "css-loader": "6.5.0",
     "eslint": "8.1.0",
