--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,15 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: c-hive/gha-yarn-cache@v2
-      - run: yarn --frozen-lockfile
+      - run: pnpm --frozen-lockfile
       - run: npm run lint
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: c-hive/gha-yarn-cache@v2
-      - run: yarn --frozen-lockfile
+      - run: pnpm --frozen-lockfile
       - run: npm run test
       - name: Coveralls
         uses: coverallsapp/github-action@master
@@ -27,6 +25,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: c-hive/gha-yarn-cache@v2
-      - run: yarn --frozen-lockfile
+      - run: pnpm --frozen-lockfile
       - run: npm run build:example
