--- a/.github/workflows/publish_github.yaml
+++ b/.github/workflows/publish_github.yaml
@@ -19,7 +19,9 @@ jobs:
           KEY: name
           VALUE: "@wxsms/vue-md-loader"
           FILE: package.json
-      - uses: c-hive/gha-yarn-cache@v2
-      - run: yarn --frozen-lockfile
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: latest
+      - run: pnpm i --frozen-lockfile
       - run: echo //npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }} >> .npmrc
       - run: npm publish --registry=https://npm.pkg.github.com
