--- a/.github/workflows/publish_npm.yaml
+++ b/.github/workflows/publish_npm.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v2
         with:
-          node-version: lts
+          node-version: lts/*
           registry-url: https://registry.npmjs.org
       - uses: actions/checkout@v2
       - uses: pnpm/action-setup@v2.0.1
